// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`cancellationEmail > reads as an acknowledgement when the Patient cancelled 1`] = `
{
  "html": "<!doctype html>
<html lang="es">
<head>
<meta charset="utf-8">
<meta name="viewport" content="width=device-width,initial-scale=1">
<meta name="x-apple-disable-message-reformatting">
<title>Dra. Mara Flamini · Dermatología</title>
</head>
<body style="margin:0;padding:0;background:#fff3f0;font-family:-apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Helvetica, Arial, sans-serif;color:#111827;">
  <table role="presentation" width="100%" cellpadding="0" cellspacing="0" style="background:#fff3f0;">
    <tr><td align="center" style="padding:24px 12px;">
      <table role="presentation" width="600" cellpadding="0" cellspacing="0" style="width:600px;max-width:100%;background:#ffffff;border-radius:12px;overflow:hidden;box-shadow:0 1px 3px rgba(0,0,0,0.1);">
        <tr><td style="background:#ba8c84;padding:20px 28px;">
          <span style="font-size:16px;font-weight:700;color:#ffffff;">Dra. Mara Flamini · Dermatología</span>
        </td></tr>
        <tr><td style="padding:28px;"><h1 style="margin:0 0 16px;font-size:20px;line-height:1.3;font-weight:700;color:#111827;">Tu cita fue cancelada</h1>
<p style="margin:0 0 16px;font-size:15px;line-height:1.6;color:#4b5563;">Hola Lucía, confirmamos la cancelación de tu cita del 2026-06-22 a las 09:30.</p>
<table role="presentation" width="100%" cellpadding="0" cellspacing="0" style="border-top:1px solid #e5e7eb;border-bottom:1px solid #e5e7eb;margin:0 0 20px;"><tr>
      <td style="padding:8px 12px 8px 0;font-size:13px;color:#4b5563;width:42%;vertical-align:top;">Paciente</td>
      <td style="padding:8px 0;font-size:14px;color:#111827;font-weight:600;vertical-align:top;">Lucía Gómez</td>
    </tr><tr>
      <td style="padding:8px 12px 8px 0;font-size:13px;color:#4b5563;width:42%;vertical-align:top;">Fecha</td>
      <td style="padding:8px 0;font-size:14px;color:#111827;font-weight:600;vertical-align:top;">2026-06-22</td>
    </tr><tr>
      <td style="padding:8px 12px 8px 0;font-size:13px;color:#4b5563;width:42%;vertical-align:top;">Hora</td>
      <td style="padding:8px 0;font-size:14px;color:#111827;font-weight:600;vertical-align:top;">09:30</td>
    </tr><tr>
      <td style="padding:8px 12px 8px 0;font-size:13px;color:#4b5563;width:42%;vertical-align:top;">Tipo de visita</td>
      <td style="padding:8px 0;font-size:14px;color:#111827;font-weight:600;vertical-align:top;">Consulta</td>
    </tr><tr>
      <td style="padding:8px 12px 8px 0;font-size:13px;color:#4b5563;width:42%;vertical-align:top;">Cobertura</td>
      <td style="padding:8px 0;font-size:14px;color:#111827;font-weight:600;vertical-align:top;">OSDE</td>
    </tr></table>
<p style="margin:0 0 16px;font-size:15px;line-height:1.6;color:#4b5563;">¿Querés reprogramar? Podés reservar un nuevo turno cuando quieras.</p>
<table role="presentation" cellpadding="0" cellspacing="0" style="margin:4px 0 16px;">
    <tr><td style="border-radius:8px;background:#9e7162;">
      <a href="https://clinica.example/agendar-visita" style="display:inline-block;padding:12px 24px;font-size:15px;font-weight:600;color:#ffffff;text-decoration:none;border-radius:8px;">Reservar otro turno</a>
    </td></tr>
  </table>
<table role="presentation" width="100%" cellpadding="0" cellspacing="0" style="margin:0 0 16px;">
    <tr><td>
      <div style="font-size:12px;font-weight:700;color:#111827;text-transform:uppercase;letter-spacing:0.04em;margin-bottom:6px;">Contacto</div>
      <div style="font-size:14px;line-height:1.6;color:#111827;">[NOMBRE CLÍNICA 1] — [TELÉFONO 1]</div><div style="font-size:14px;line-height:1.6;color:#111827;">[NOMBRE CLÍNICA 2] — [TELÉFONO 2]</div>
    </td></tr>
  </table></td></tr>
        <tr><td style="padding:18px 28px;background:#f7e8e4;border-top:1px solid #e5e7eb;">
          <span style="font-size:12px;color:#4b5563;">Dra. Mara Flamini · Dermatología</span>
        </td></tr>
      </table>
    </td></tr>
  </table>
</body>
</html>",
  "subject": "Tu cita fue cancelada — Dra. Mara Flamini",
  "text": "Hola Lucía, confirmamos la cancelación de tu cita del 2026-06-22 a las 09:30.

Detalles de la cita:
- Paciente: Lucía Gómez
- Fecha: 2026-06-22
- Hora: 09:30
- Tipo de visita: Consulta
- Cobertura: OSDE

¿Querés reprogramar? Podés reservar un nuevo turno cuando quieras. https://clinica.example/agendar-visita

Contacto:
- [NOMBRE CLÍNICA 1] — [TELÉFONO 1]
- [NOMBRE CLÍNICA 2] — [TELÉFONO 2]

Dra. Mara Flamini · Dermatología",
  "to": "lucia@example.com",
}
`;

exports[`cancellationEmail > reads as an apology when the clinic cancelled 1`] = `
{
  "html": "<!doctype html>
<html lang="es">
<head>
<meta charset="utf-8">
<meta name="viewport" content="width=device-width,initial-scale=1">
<meta name="x-apple-disable-message-reformatting">
<title>Dra. Mara Flamini · Dermatología</title>
</head>
<body style="margin:0;padding:0;background:#fff3f0;font-family:-apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Helvetica, Arial, sans-serif;color:#111827;">
  <table role="presentation" width="100%" cellpadding="0" cellspacing="0" style="background:#fff3f0;">
    <tr><td align="center" style="padding:24px 12px;">
      <table role="presentation" width="600" cellpadding="0" cellspacing="0" style="width:600px;max-width:100%;background:#ffffff;border-radius:12px;overflow:hidden;box-shadow:0 1px 3px rgba(0,0,0,0.1);">
        <tr><td style="background:#ba8c84;padding:20px 28px;">
          <span style="font-size:16px;font-weight:700;color:#ffffff;">Dra. Mara Flamini · Dermatología</span>
        </td></tr>
        <tr><td style="padding:28px;"><h1 style="margin:0 0 16px;font-size:20px;line-height:1.3;font-weight:700;color:#111827;">Tu cita fue cancelada</h1>
<p style="margin:0 0 16px;font-size:15px;line-height:1.6;color:#4b5563;">Hola Lucía, lamentamos informarte que el consultorio debió cancelar tu cita del 2026-06-22 a las 09:30. Disculpá las molestias.</p>
<table role="presentation" width="100%" cellpadding="0" cellspacing="0" style="border-top:1px solid #e5e7eb;border-bottom:1px solid #e5e7eb;margin:0 0 20px;"><tr>
      <td style="padding:8px 12px 8px 0;font-size:13px;color:#4b5563;width:42%;vertical-align:top;">Paciente</td>
      <td style="padding:8px 0;font-size:14px;color:#111827;font-weight:600;vertical-align:top;">Lucía Gómez</td>
    </tr><tr>
      <td style="padding:8px 12px 8px 0;font-size:13px;color:#4b5563;width:42%;vertical-align:top;">Fecha</td>
      <td style="padding:8px 0;font-size:14px;color:#111827;font-weight:600;vertical-align:top;">2026-06-22</td>
    </tr><tr>
      <td style="padding:8px 12px 8px 0;font-size:13px;color:#4b5563;width:42%;vertical-align:top;">Hora</td>
      <td style="padding:8px 0;font-size:14px;color:#111827;font-weight:600;vertical-align:top;">09:30</td>
    </tr><tr>
      <td style="padding:8px 12px 8px 0;font-size:13px;color:#4b5563;width:42%;vertical-align:top;">Tipo de visita</td>
      <td style="padding:8px 0;font-size:14px;color:#111827;font-weight:600;vertical-align:top;">Consulta</td>
    </tr><tr>
      <td style="padding:8px 12px 8px 0;font-size:13px;color:#4b5563;width:42%;vertical-align:top;">Cobertura</td>
      <td style="padding:8px 0;font-size:14px;color:#111827;font-weight:600;vertical-align:top;">OSDE</td>
    </tr></table>
<p style="margin:0 0 16px;font-size:15px;line-height:1.6;color:#4b5563;">¿Querés reprogramar? Podés reservar un nuevo turno cuando quieras.</p>
<table role="presentation" cellpadding="0" cellspacing="0" style="margin:4px 0 16px;">
    <tr><td style="border-radius:8px;background:#9e7162;">
      <a href="https://clinica.example/agendar-visita" style="display:inline-block;padding:12px 24px;font-size:15px;font-weight:600;color:#ffffff;text-decoration:none;border-radius:8px;">Reservar otro turno</a>
    </td></tr>
  </table>
<table role="presentation" width="100%" cellpadding="0" cellspacing="0" style="margin:0 0 16px;">
    <tr><td>
      <div style="font-size:12px;font-weight:700;color:#111827;text-transform:uppercase;letter-spacing:0.04em;margin-bottom:6px;">Contacto</div>
      <div style="font-size:14px;line-height:1.6;color:#111827;">[NOMBRE CLÍNICA 1] — [TELÉFONO 1]</div><div style="font-size:14px;line-height:1.6;color:#111827;">[NOMBRE CLÍNICA 2] — [TELÉFONO 2]</div>
    </td></tr>
  </table></td></tr>
        <tr><td style="padding:18px 28px;background:#f7e8e4;border-top:1px solid #e5e7eb;">
          <span style="font-size:12px;color:#4b5563;">Dra. Mara Flamini · Dermatología</span>
        </td></tr>
      </table>
    </td></tr>
  </table>
</body>
</html>",
  "subject": "Tu cita fue cancelada — Dra. Mara Flamini",
  "text": "Hola Lucía, lamentamos informarte que el consultorio debió cancelar tu cita del 2026-06-22 a las 09:30. Disculpá las molestias.

Detalles de la cita:
- Paciente: Lucía Gómez
- Fecha: 2026-06-22
- Hora: 09:30
- Tipo de visita: Consulta
- Cobertura: OSDE

¿Querés reprogramar? Podés reservar un nuevo turno cuando quieras. https://clinica.example/agendar-visita

Contacto:
- [NOMBRE CLÍNICA 1] — [TELÉFONO 1]
- [NOMBRE CLÍNICA 2] — [TELÉFONO 2]

Dra. Mara Flamini · Dermatología",
  "to": "lucia@example.com",
}
`;
